MODIFICADO EL CÓDIGOG PARA USAR HIBERNATE Y JPA, TODAS LAS FUNCIONALIDADES CONSEGUIDAS (PENDIENTE DE IMPLEMENTAR EL CSS Y DE CREAR ADMIN)