@@ -1,43 +1,42 @@
 package es.prw.services;
 
 import es.prw.dtos.MateriaProgresoDTO;
-import es.prw.dtos.NotaHistorialDTO;
 import es.prw.models.Materia;
 import es.prw.models.Test;
 import es.prw.repositories.PuntuacionRepository;
 import es.prw.repositories.TestRepository;
-
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import java.util.*;
+import java.util.stream.Collectors;
 
-import java.sql.ResultSet;
-import java.sql.ResultSetMetaData;
-import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
 @Service
 public class ProgresoService {
 
-    @Autowired
-    private PuntuacionRepository puntuacionRepository;
+    private final PuntuacionRepository puntuacionRepository;
+    private final TestRepository testRepository;
 
-    @Autowired
-    private TestRepository testRepository;
+    // Inyección de dependencias por constructor
+    public ProgresoService(PuntuacionRepository puntuacionRepository, TestRepository testRepository) {
+        this.puntuacionRepository = puntuacionRepository;
+        this.testRepository = testRepository;
+    }
 
+    @Transactional(readOnly = true)
     public List<MateriaProgresoDTO> obtenerProgresoMaterias(Integer idUsuario) {
         List<Materia> materias = testRepository.findAll().stream()
                 .map(Test::getMateria)
                 .distinct()
-                .toList();
+                .collect(Collectors.toList()); // Mejor compatibilidad con versiones anteriores de Java
 
         return materias.stream().map(materia -> {
             int totalTests = testRepository.countByMateria(materia);
             int testsAprobados = puntuacionRepository.countAprobadosByMateria(materia.getIdMateria());
-            return new MateriaProgresoDTO(materia.getMateria(), totalTests, testsAprobados);
-        }).toList();
+            return new MateriaProgresoDTO(materia.getNombreMateria(), totalTests, testsAprobados);
+        }).collect(Collectors.toList());
     }
+
+    @Transactional(readOnly = true)
     public Map<String, Map<String, List<Double>>> obtenerProgresoTests(Integer idUsuario) {
         Map<String, Map<String, List<Double>>> historialNotas = new HashMap<>();
 
@@ -49,18 +48,12 @@ public class ProgresoService {
             String testNombre = (String) fila[1];
             Double nota = (Double) fila[2];
 
-            // Asegurar que la materia existe en el mapa
-            historialNotas.putIfAbsent(materiaNombre, new HashMap<>());
-
-            // Asegurar que el test existe dentro de la materia
-            historialNotas.get(materiaNombre).putIfAbsent(testNombre, new ArrayList<>());
-
-            // Agregar la nota al test correspondiente
-            historialNotas.get(materiaNombre).get(testNombre).add(nota);
+            // Usar `computeIfAbsent` para optimizar la inicialización de los mapas
+            historialNotas.computeIfAbsent(materiaNombre, k -> new HashMap<>())
+                          .computeIfAbsent(testNombre, k -> new ArrayList<>())
+                          .add(nota);
         }
 
         return historialNotas;
     }
-
 }
-
